# scoptimize

./: Dockerfile  README.md  __init__.py  prettify.sh  pyproject.toml  setup.cfg  setup.py  update_documentation.sh
docs/: index.html  network.html  scoptimize.html  search.js  utils.html
docs/scoptimize/: network.html  utils.html
notebooks/: coding_ex_1.ipynb  coding_ex_2.ipynb  scoptimize_ex.ipynb  simple_model.ipynb
scnd/: network.py  utils.py
scoptimize/: network.py  utils.py
test/: test.py  test_0.py  test_1.py  test_2.py  test_3.py
