[tool.black]
line-length = 100
target-version = ['py39']
exclude = '/.*(__pycache__).*/'

[tool.setuptools]
py-modules = ["scoptimize"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scoptimize"
version = "1.0.0"
description = "Supply Chain Optimization Package"
authors = [
    {name="Connor Makowski", email="conmak@mit.edu"}
]
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    'License :: OSI Approved :: MIT License',
    "Operating System :: OS Independent",
]
dependencies = ["pulp>=2.7.0", "type_enforced>=0.0.16"]

[project.urls]
"Homepage" = "https://github.com/connor-makowski/scoptimize"
"Bug Tracker" = "https://github.com/connor-makowski/scoptimize/issues"
"Documentation" = "https://connor-makowski.github.io/scoptimize/scoptimize.html"